Fix DOS end of line detection

BUG:442199
FIXE-IN:1.9.4